--- a/public/manifest.json
+++ b/public/manifest.json
@@ -11,9 +11,7 @@
   "content_scripts": [
     {
       "js": ["content.js"],
-      "matches": [
-        "*://*/*"
-      ]
+      "matches": ["*://*.skypech.com/*"]
     }
   ]
 }
