add block button

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,9 @@
   },
   "cSpell.words": [
     "autopagerize",
+    "AUTOPAGERIZER",
     "nekama",
-    "skypech"
+    "skypech",
+    "skypeid"
   ]
 }
