--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,18 +14,15 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Setup Deno
-        uses: denoland/setup-deno@v1
+        uses: denolib/setup-deno@v2
         with:
           deno-version: 1.36.0 # バージョンを適切に指定
 
       - name: Build
-        run: |
-          deno run build
+        run: rm -rf ./dist/ && cp -r ./public ./dist && deno bundle ./src/content.ts ./dist/content.js
 
       - name: Create ZIP file
-        run: |
-          cd dist
-          zip -r ../release.zip .
+        run: zip -r release.zip dist
 
       - name: Create Release
         id: create_release
